arm64: dts: add flash-LED support for 88pm886
gpio enable/disable
cf_en gpio number
cf_txmask gpio number
flash timer default value
voltage configurations

Change-Id: Ic513e8ff88bcec45cdc9ba0173277bbf292ffcd6
Signed-off-by: Ariel Heller <arielh@marvell.com>

--- a/arch/arm64/boot/dts/88pm886.dtsi
+++ b/arch/arm64/boot/dts/88pm886.dtsi
@@ -163,6 +163,11 @@
 		  compatible = "marvell,88pm886-headset";
 		  status = "disabled";
 	};
+
+	led {
+		compatible = "marvell,88pm886-leds";
+	};
+
 	red: led-rgb0 {
 		compatible = "marvell,88pm886-rgb0";
 	};
