char: maxscend: add mxd support
Change-Id: I4079803e5bbe236e3d609f70e5ebe9a3ed2f93da
Signed-off-by: Beilei Xing <beileix@marvell.com>

--- a/drivers/char/Kconfig
+++ b/drivers/char/Kconfig
@@ -683,5 +683,6 @@ config PXA9XX_ACIPC
 	  Communication Intel-Processor Communication on PXA988,
 	  PXA1088, PXA1U88 and PXA1928.
 
+source "drivers/char/maxscend/Kconfig"
 endmenu
 
