drivers: marvell: Add SSIPC feature in kconfig
Add SSIPC feature in kconfig (CONFIG_SSIPC_SUPPORT).

Change-Id: I0c6593c97ce8fc2ee4151ba4c76ac381e0017e11
Signed-off-by: Li Wang <wangli@marvell.com>

--- a/drivers/marvell/Kconfig
+++ b/drivers/marvell/Kconfig
@@ -115,6 +115,13 @@ config MRVL_MMP_MODEM
 	help
 	  Marvell MMP modem driver for communication processor
 
+config SSIPC_SUPPORT
+	bool "SSIPC feature"
+	depends on MRVL_MMP_MODEM
+	default n
+	help
+	  support SSIPC feature
+
 config MRVL_MMP_CM3
 	tristate "Marvell CM3 resource manager driver"
 	depends on MRVL_MMP_MODEM && PXA9XX_AMIPC
