arm64: defconfig: use flatmem instead of sparsemem
Currently we didn't use non-continuous memory, also memory hotplug was not used,
so just change to flatmem model.

Change-Id: I35a3578d066ba9724eb077eafb9f89465fe7978c
Signed-off-by: Lisa Du <cldu@marvell.com>

--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -201,8 +201,10 @@ config ARCH_HAS_HOLES_MEMORYMODEL
 	def_bool y if SPARSEMEM
 
 config ARCH_SPARSEMEM_ENABLE
-	def_bool y
-	select SPARSEMEM_VMEMMAP_ENABLE
+	bool
+
+config SPARSEMEM_VMEMMAP_ENABLE
+	def_bool ARCH_SPARSEMEM_ENABLE
 
 config ARCH_SPARSEMEM_DEFAULT
 	def_bool ARCH_SPARSEMEM_ENABLE
