8897: driver update to C3X15044
EEBU release 8897
SD-WLAN-SD-BT-NFC-8897-KK44_LINUX_3_10_17-T50-15.68.4.p93-15.28.4.p93-C3X15044_B0B1-GPL

Change-Id: I6e7162babbc2956550da726b6b21ce58ac0e30ca
Signed-off-by: Gannicus Guo <jiaguo@marvell.com>

--- a/drivers/marvell/sd8897/mbtc_src/Makefile
+++ b/drivers/marvell/sd8897/mbtc_src/Makefile
@@ -41,8 +41,8 @@ endif
 # make KERNELDIR=/usr/src/arm/<arch-bsp-path>
 # Alternatively KERNELDIR can be set in the environment.
 # Default value for KERNELDIR is set below.
+KERNELDIR ?= /usr/src/arm/linux-3.10.17-JB-T50
 CROSS_COMPILE ?= /usr/local/arm-eabi-4.6/bin/arm-eabi-
-KERNELDIR ?= /usr/src/arm/linux-3.4.39-pxa1088
 
 # CROSS_COMPILE specify the prefix used for all executables used
 # during compilation. Only gcc and related bin-utils executables
@@ -50,7 +50,7 @@ KERNELDIR ?= /usr/src/arm/linux-3.4.39-pxa1088
 # make CROSS_COMPILE=</usr/local/arm/4.1.1/bin/>arm-linux-
 # Alternatively CROSS_COMPILE can be set in the environment.
 # Default value for CROSS_COMPILE is set below.
-CROSS_COMPILE ?= /usr/local/arm/4.1.1/bin/arm-linux-
+CROSS_COMPILE ?= /usr/local/arm-eabi-4.4.3/bin/arm-eabi-
 
 # INSTALLDIR specify the path to install the kernel module after
 # succesful compilation.
