arm64: dts: pxa1908: enable dmachain for GPS
Add dmachain table base address for GPS ACQ.

Change-Id: Ie511f602881ce366a976a9d704096b456bb6070e
Signed-off-by: Feng Hong <hongfeng@marvell.com>

--- a/arch/arm64/boot/dts/pxa1908.dtsi
+++ b/arch/arm64/boot/dts/pxa1908.dtsi
@@ -907,6 +907,8 @@
 
 	amipc {
 		compatible = "marvell,mmp-amipc";
+		reg = <0xC9420000 0x4000>;
+		reg-name = "dmachain";
 		interrupts = <0 95 0x4>;
 		status = "okay";
 	};
