drivers: marvell: security: Update TEE driver source code
1. TZDD driver internal version is v1.1.0
2. Fix the bugs found by TEE certificate (part #1) in TEE driver

Change-Id: I119687d4629c5eefec2c3e293dddb288c9b33387
Signed-off-by: Mi Li <mli18@marvell.com>

--- a/drivers/marvell/security/mmp-tzdd/src/Makefile
+++ b/drivers/marvell/security/mmp-tzdd/src/Makefile
@@ -82,6 +82,12 @@ else
 tzdd-objs += comm/tee_cm_smi.32b.o
 endif
 
+ifeq ($(CONFIG_TEE_RES_CFG_16M), y)
+ccflags-y += -DTEE_RES_CFG_16M
+else
+ccflags-y += -DTEE_RES_CFG_8M
+endif
+
 ccflags-y += -Wall -O2 \
 				-I$(src)/osa/ \
 				-I$(src)/osa/include \
