--- a/arch/arm64/boot/dts/88pm886_battery_common.dtsi
+++ b/arch/arm64/boot/dts/88pm886_battery_common.dtsi
@@ -21,11 +21,17 @@
 		power-off-th = <3350>;		/* mv */
 		safe-power-off-th = <3000>;	/* mv */
 
-		io-channels 	 = <&gpadc 7>,
-			           <&gpadc 13>,
-				   <&gpadc 17>;
+		io-channels 	 = <&gpadc 7>,  /* vbat */
+			           <&gpadc 13>, /* vbat_slp */
+				   <&gpadc 14>, /* gpadc0_res */
+				   <&gpadc 15>, /* gpadc1_res */
+				   <&gpadc 16>, /* gpadc2_res */
+				   <&gpadc 17>; /* gpadc3_res */
 		io-channel-names = "vbat",
 				   "vbat_slp",
+				   "gpadc0_res",
+				   "gpadc1_res",
+				   "gpadc2_res",
 				   "gpadc3_res";
 	};
 };
