video: mmp: add dfc driver for ulc
To avoid EMI caused by LCD clk source, we need to provide interface to
change lcd clk source rate.
ULC LCD clk source have pll1_624M, pll1_832M, pll1_499M, pll4, pll4_div3, so
the switch for DFC should happen between two of them.

Implementation:
- LCD switch clk source between PLL1 and PLL4.
- LCD need to switch PLL in v-blank.
- LCD will choose proper rate in the maintained rate
  table in DFC PLL1 or PLL4.
- DFC is still based on DIP driver, which will called by upper side
- "echo xx > freq" can start a freq chg on developer side.
- If need to change PLL4 rate, first we should switch to PLL1, then
change PLL4 rate, then switch to PLL4;
- Since PLL4_VCO's step is (26*4/3)M, so the div of pll4 around 416M(depend
on panel's resolution) is 4, is the lcd freq step is (26*4/3)/4=9M.

Change-Id: I11be4e153875136b2b0f23cffc2540a4fbfe05d0
Signed-off-by: Qing Zhu <qzhu@marvell.com>

--- a/drivers/video/mmp/hw/Kconfig
+++ b/drivers/video/mmp/hw/Kconfig
@@ -10,6 +10,15 @@ config MMP_DISP_CONTROLLER
 		will register vdma, ctrl, dsi, panel for
 		display
 
+config MMP_DISP_DFC
+	bool "mmp display controller dfc support"
+	depends on MMP_DISP_CONTROLLER
+	default n
+	help
+		Marvell MMP display freqency change feature support
+		change between pll1 and dedicated PLL for LCD, this
+		config shoud used with DIP channel solution together
+
 config MMP_DISP_SPI
 	bool "mmp display controller spi port"
 	depends on MMP_DISP_CONTROLLER && SPI_MASTER
