video: mmp: add otm8018b panel support on ulc
This panel is 480*854, dsi lanes is 2, its required escape clk
is lower than 720p panel, we choose 26M which can light up this
panel.

Change-Id: I4f9874584b4041f472b9e0214e5a390692700048
Signed-off-by: Qing Zhu <qzhu@marvell.com>

--- a/drivers/video/mmp/panel/Kconfig
+++ b/drivers/video/mmp/panel/Kconfig
@@ -35,6 +35,12 @@ config MMP_PANEL_OTM1281A
 	help
 		MIPI panel OTM1281A support
 
+config MMP_PANEL_OTM8018B
+	bool "MIPI panel OTM8018B support"
+	default n
+	help
+		MIPI panel OTM8018B support
+
 config MMP_PANEL_TD043MGEA1
 	bool "parallel panel TD043MGEA1 support"
 	default n
