arm64: dts: add panel otm8018b for ulc
Change-Id: Ib7e1ba546eb46a28d10fa2618f86d35194fc8063
Signed-off-by: Qing Zhu <qzhu@marvell.com>

--- a/arch/arm64/boot/dts/pxa1908-dkb.dts
+++ b/arch/arm64/boot/dts/pxa1908-dkb.dts
@@ -1145,6 +1145,15 @@
 		status = "okay";
 	};
 
+	panel2: otm8018b {
+		compatible = "marvell,mmp-otm8018b";
+		marvell,path-name = "mmp_pnpath";
+		panel_esd = <0>;
+		rst_gpio = <&gpio 4 0>;
+		avdd-supply = <&ldo11>;
+		status = "okay";
+	};
+
 	sd8x-rfkill {
 		sd-host = <&sdh1>;
 		pd-gpio = <&gpio 7 0>;
