ARM64: dts: add udr constraint to audio map for pxa1908
add udr lpm contraint to audio map on ULC1. When audio MAP works,
system can't enter UDR since vctcxo is needed.

Change-Id: I372d87838e9ebe18157f070a7186d5043490d09c
Signed-off-by: Qiao Zhou <zhouqiao@marvell.com>

--- a/arch/arm64/boot/dts/pxa1908-dkb.dts
+++ b/arch/arm64/boot/dts/pxa1908-dkb.dts
@@ -1007,6 +1007,7 @@
 			map: map@d1200000 {
 				marvell,b0_fix;
 				marvell,apll = <1>;
+				lpm-qos = <PM_QOS_CPUIDLE_BLOCK_UDR>;
 				status = "okay";
 				mmp_map_codec: mmp_map_codec {
 					compatible = "marvell,mmp-map-codec";
