--- a/drivers/cpufreq/Makefile
+++ b/drivers/cpufreq/Makefile
@@ -78,6 +78,7 @@ obj-$(CONFIG_ARM_TEGRA_CPUFREQ)		+= tegra-cpufreq.o
 obj-$(CONFIG_ARM_VEXPRESS_SPC_CPUFREQ)	+= vexpress-spc-cpufreq.o
 obj-$(CONFIG_ARM_PXA988_CPUFREQ)	+= pxa988-cpufreq.o
 obj-$(CONFIG_ARM_MMP_SMP_CPUFREQ)	+= mmp-smp-cpufreq.o
+obj-$(CONFIG_ARM_MMP_BL_CPUFREQ)	+= mmp-bL-cpufreq.o
 
 ##################################################################################
 # PowerPC platform drivers
