arm64: dts: change B52ISP H/W descriptor to Lite on pxa1908
this modification are for ULC1 and other platform.

Change-Id: I51c1220e53d95ce1f757f7e8c2e3083fd203108a
Signed-off-by: Owen Zhang <xinzha@marvell.com>

--- a/arch/arm64/boot/dts/pxa1908.dtsi
+++ b/arch/arm64/boot/dts/pxa1908.dtsi
@@ -405,7 +405,7 @@
 			};
 
 			b52isp: b52isp@0xC0200000 {
-				compatible = "ovt,single-pipeline ISP";
+				compatible = "ovt,single-pipeline ISP(Lite)";
 				reg = <0xC0200000 0xFFFFF>;
 				reg-name = "b52isp-regs";
 				interrupts = <0 11 0x4>;
