ARM64: dts: disable coresight by default for pxa1936
disable coresight by default for pxa1936

Change-Id: I9f7c96f8b87762884b1d76d37b5ba784fe8e92d4
Signed-off-by: Leo Song <liangs@marvell.com>

--- a/arch/arm64/boot/dts/pxa1936.dtsi
+++ b/arch/arm64/boot/dts/pxa1936.dtsi
@@ -603,6 +603,7 @@
 				clocks = <&soc_clocks PXA1U88_CLK_DBGCLK>,
 					 <&soc_clocks PXA1U88_CLK_TRACECLK>;
 				clock-names = "DBGCLK","TRACECLK";
+				status = "disabled";
 				#address-cells = <1>;
 				#size-cells = <1>;
 				reg = <0xd4100000 0x100000>;
