marvell: telephony: iml: fix incorrect DMA address
DMA source address provided by MSA is not physical address.
DMA hardware on previous platforms can support such address, however
in 1908 DMA hardware can only accept physical address or DMA operation
will fail.

This patch converts address from MSA to physical address before
starting DMA operation.

How to test:
Check if IML to SD works on 1908.

Change-Id: I3e3202679ac1d35489a12cb89f78a72cbd29860b
Signed-off-by: Haili Wang <hlw@marvell.com>

--- a/arch/arm64/boot/dts/pxa1908.dtsi
+++ b/arch/arm64/boot/dts/pxa1908.dtsi
@@ -991,9 +991,10 @@
 
 	iml: iml@7ffffe0{
 		compatible = "marvell,mmp-iml";
-		reg = <0x07ffffe0 0x10>, <0xd403d200 0x10>, <0xd403b038 0x10>;
+		reg = <0x07ffffe0 0x10>, <0xd403d200 0x10>, <0xd403b038 0x10>, <0xd4282d24 0x4>;
 		interrupts = <0 56 0x4>;
 		interrupt-names = "IPC_MSA_DATA";
+		remap = <0 26 6>;
 		dmas = <&pdma0 0xFF 0>;
 		dma-names =  "iml-dma";
 		status = "disabled";
