--- a/arch/arm64/boot/dts/pxa1908-dkb.dts
+++ b/arch/arm64/boot/dts/pxa1908-dkb.dts
@@ -1196,6 +1196,15 @@
 		status = "okay";
 	};
 
+	panel3: otm1283a {
+		compatible = "marvell,mmp-otm1283a";
+		marvell,path-name = "mmp_pnpath";
+		panel_esd = <0>;
+		rst_gpio = <&gpio 4 0>;
+		avdd-supply = <&ldo11>;
+		status = "okay";
+	};
+
 	sd8x-rfkill {
 		sd-host = <&sdh1>;
 		pd-gpio = <&gpio 7 0>;
