--- a/drivers/video/mmp/panel/Kconfig
+++ b/drivers/video/mmp/panel/Kconfig
@@ -41,6 +41,12 @@ config MMP_PANEL_OTM8018B
 	help
 		MIPI panel OTM8018B support
 
+config MMP_PANEL_OTM1283A
+	bool "MIPI panel OTM1283A support"
+	default n
+	help
+		MIPI panel OTM1283A support
+
 config MMP_PANEL_TD043MGEA1
 	bool "parallel panel TD043MGEA1 support"
 	default n
