clk: mmp: add PXA1936_CLK for Helan3
Though Helan3 belongs to Helanx series, there
are many differences from other previous Helanx
series SoCs due to the big.LITTLE architecture
especially dual clusters support, CCI-400 cause
changes to some important PMU register and the
software structures are changed accordingly. So
we have to distinguish Helan3 clock driver from
others in MMP clock framework.

Change-Id: Ib7173a8378930df25f445b0380b05e533e2cfca4
Signed-off-by: Bill Zhou <zhoub@marvell.com>

--- a/drivers/clk/mmp/Kconfig
+++ b/drivers/clk/mmp/Kconfig
@@ -34,4 +34,15 @@ config VOLDC_STAT
 	---help---
 	  Enable Dynamic Voltage state feature.
 
+config PXA1936_CLK
+	tristate "Enable pxa1936 clock"
+	depends on ARCH_MMP && COMMON_CLK
+	default n
+	---help---
+	  Enable clock driver for pxa1936. Though pxa1936 belongs to
+	  Helanx series, it has some difference due to the big.LITTLE
+	  architecture especially some PMU registers are totally
+	  different from those on previous platforms such as pxa1088,
+	  pxa1U88 and pxa1908.
+
 endif
