arm64: dts: add property to handle the low temperature case and battery cycles
temperature: 0C, -10C;
battery cycles: 15%, 85%

Change-Id: I41e041c61ff004ff822faa51f93fd25e91675c69
Signed-off-by: Yi Zhang <yizhang@marvell.com>

--- a/arch/arm64/boot/dts/88pm886_sp4555557sa.dtsi
+++ b/arch/arm64/boot/dts/88pm886_sp4555557sa.dtsi
@@ -47,6 +47,14 @@
 		t3-degree = <50>;	/* 30C */
 		t4-degree = <65>;	/* 45C */
 
+		times-in-minus-ten = <2>;
+		offset-in-minus-ten = <100>;
+		times-in-zero = <1>;
+		offset-in-zero = <0>;
+
+		soc-low-th-cycle = <15>;
+		soc-high-th-cycle = <85>;
+
 		zero-degree-ohm = <28704>;
 
 		/* -24C, -23C, ..., 62C, 63C */
