clk: mmp: add clock driver for pxa1936
This patch is based on clk-pxa1U88.c with commit
a8ef52eddc41f879bb2651444ca7b356dd6cee79 to add
clock driver for pxa1936.

Change-Id: Ib52464fe4b02efc7c6b48331a15faca1ff73e150
Signed-off-by: Bill Zhou <zhoub@marvell.com>

--- a/drivers/clk/mmp/Makefile
+++ b/drivers/clk/mmp/Makefile
@@ -6,7 +6,7 @@ obj-y += clk-apbc.o clk-apmu.o clk-frac.o clk-mix.o clk-gate.o clk.o clk-gate2.o
 
 ifneq ($(CONFIG_OF),)
 ifeq ($(CONFIG_PXA1936_CLK), y)
-obj-y += clk-core-helan3.o
+obj-y += clk-core-helan3.o clk-pxa1936.o
 else
 obj-y += clk-core-helanx.o clk-pxa1L88.o clk-pxa1U88.o
 endif
