arm64: dts: pxa1908: pass wib_1v8 to sd8x_rfkill
So that the driver can en/dis regulator sleep mode.

Note:
wib_1V8 shares the BUCK2 with other modules, if other module
need to block the buck enter to sleep mode, now it can not be
supported well.

Change-Id: Iae12395286bab5fe408b3aa3a55799a317356626
Signed-off-by: Jialing Fu <jlfu@marvell.com>

--- a/arch/arm64/boot/dts/pxa1908-dkb.dts
+++ b/arch/arm64/boot/dts/pxa1908-dkb.dts
@@ -1210,6 +1210,7 @@
 		pd-gpio = <&gpio 7 0>;
 		rst-gpio = <&gpio 71 0>;
 		wib_3v3-supply = <&ldo15>;
+		wib_1v8-supply = <&buck2>;
 		3v3-ldo-gpio = <&gpio 14 0>;
 		edge-wakeup-gpio = <&gpio 39 0>;
 		status = "okay";
